--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "16.1.1",
     "pg": "^8.16.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-force-graph-2d": "^1.29.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
